# sleep_scoring

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  app.spec  app_mac.spec  change_log.txt  codex_work_log.md  codex_work_log_archive.md  dash_app_cookbook.md  environment.yml  next_steps.md  project_overview.md  pyproject.toml  requirements.txt  run_desktop_app.py  setup.py  ui_response_time_optimization_progress.txt  user_interface_optimization.txt  work_log.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_file_problem.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
app_src/: __init__.py  app.py  app_dev.py  chatgpt_inference.py  chatgpt_preview.py  chatgpt_scoring_guidance.md  chatgpt_tools.py  components.py  components_dev.py  config.py  debug_tool.py  dialogs.py  env_loader.py  get_fft_plots.py  inference.py  make_figure.py  make_figure_chatgpt.py  make_figure_dev.py  make_mp4.py  mat_utils.py  postprocessing.py  preprocessing.py  resampling.py  routes.py  run_inference_ne.py  run_inference_sdreamer.py  run_inference_stats_model.py  server.py  session.py
app_src/assets/: annotationAutoPan.js  clientsideCallbacks.js  graphContextMenu.js  graphCustomPointerPan.js  graphDirectRestyle.js  graphFinalRefresh.js  graphNavigationProfiler.js  graphRelayoutCoalescer.js
app_src/callbacks/: __init__.py  clientside.py  loading.py  navigation.py  prediction.py  saving.py  video.py
models/sdreamer/: n2nBaseLineNE.py  n2nSeqNewMoE2.py
models/sdreamer/layers/: attention.py  (+2 more)
packaging/windows/: README.md  align_update_asset_with_package.py  app.spec  export_runtime_from_git.py  make_app_update_zip.ps1  make_full_app_zip.ps1  make_source_update_asset.ps1  smoke_check_release.ps1
paper/: paper.bib  paper.md
scripts/: plot_low_band_spectrogram_distribution.py  visualize_low_band_wake_bouts.py
tests/: __init__.py  conftest.py  test_app_helpers.py  test_chatgpt_tools.py  test_env_loader.py  test_fft.py  test_inference_scaffold.py  test_mat_utils.py  test_multi_session.py  test_postprocessing.py  test_preprocessing.py  test_run_desktop_app.py  test_smoke.py  test_update_asset_packaging.py
tests/js/: README.md  clientsideCallbacks.test.js  package-lock.json  package.json  setup.js
work_log_archive/: README.md  work_log_2026-04-17_to_2026-04-30.md  work_log_2026-05-05_to_2026-05-23.md  work_log_2026-05-25_to_2026-06-05.md  work_log_2026-06-06_to_2026-06-15.md  work_log_2026-06-23_to_2026-07-05.md  work_log_2026-07-07_to_2026-07-14.md
(+5 files in other folders)
